--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@fastify/static": "^6.10.1",
     "@fastify/view": "^7.4.1",
+    "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
     "fastify": "^4.17.0",
     "mongoose": "^7.1.1"
