--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "type": "module",
   "version": "1.0.0",
   "description": "",
+  "engines": {
+    "node": "18.x"
+  },
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./public/assets/css/tailwind.css -o ./public/assets/css/index.css --watch"
+    "dev": "npx tailwindcss -i ./public/assets/css/tailwind.css -o ./public/assets/css/index.css --watch",
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +18,14 @@
   "dependencies": {
     "@fastify/static": "^6.10.1",
     "@fastify/view": "^7.4.1",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "ejs": "^3.1.9",
     "fastify": "^4.17.0",
     "mongoose": "^7.1.1"
   },
   "devDependencies": {
+    "laravel-mix": "^6.0.49",
     "tailwindcss": "^3.3.2"
   }
 }
