--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^16.0.3",
     "ejs": "^3.1.9",
     "fastify": "^4.17.0",
+    "jose": "^4.14.4",
     "mongoose": "^7.1.1",
     "nodemon": "^2.0.22"
   },
