--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-APP_ENV=
+APP_ENV='local'
 
-LOCAL_DATABASE=
+LOCAL_DATABASE='mongodb://localhost:27017/fastify-mvc'
 SERVER_DATABASE=
 
-ADMIN_USER_EMAIL=
-ADMIN_USER_PASSWORD=
+ADMIN_USER_EMAIL='jace@fastiy.io'
+ADMIN_USER_PASSWORD='password'
 
-JWT_SECRET=
+JWT_SECRET='zH4NRP1HMALxxCFnRZABFA7GOJtzU_gIj02alfL1lvI'
