--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./public/assets/css/tailwind.css -o ./public/assets/css/index.css --watch",
+    "mix:watch": "mix watch",
     "start": "node index.js",
     "start:dev": "nodemon index.js"
   },
@@ -27,6 +27,7 @@
     "ajv": "^8.12.0",
     "ajv-formats": "^2.1.1",
     "alpinejs": "^3.12.1",
+    "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
@@ -37,7 +38,6 @@
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
-    "babel-preset-env": "^1.7.0",
     "laravel-mix": "^6.0.49",
     "tailwindcss": "^3.3.2"
   }
