--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "laravel-mix": "^6.0.49",
+    "mix-tailwindcss": "^1.3.0",
     "tailwindcss": "^3.3.2"
   }
 }
