--- a/mix-manifest.json
+++ b/mix-manifest.json
@@ -1,4 +1,7 @@
 {
-    "/public/assets/js/app.js": "/public/assets/js/app.js?id=a50d20c27fd2f72f57b9998aa6bcb3ed",
-    "/public/assets/css/index.css": "/public/assets/css/index.css?id=8b9271fa59dd5bcd37999dcc19f8aa29"
+    "/public/assets/js/app.js": "/public/assets/js/app.js?id=cd4ba0b6e1c353c3737a10ecb13bc824",
+    "/public/assets/js/user/index.js": "/public/assets/js/user/index.js?id=1aabc77fe41cba2009df4332ee3f13c8",
+    "/public/assets/js/auth/login.js": "/public/assets/js/auth/login.js?id=b85ed5b928590b906c9bbb27b65a2d99",
+    "/public/assets/js/user/create.js": "/public/assets/js/user/create.js?id=4d6e0ba11e1f6249683f99363de04709",
+    "/public/assets/css/app.css": "/public/assets/css/app.css?id=f8c6ebba73830d9c8aa3b66014cc5048"
 }
